front/public/style.css
body {
  padding: 0;
  margin: 0;
  font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
}

html, body {
  height: 100%;
}

html, body, .container, #map {
  width: 100%;
}

.Welcome {
  color: #fff;
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  align-items: center;
  text-align: center;
  height: 100%;
}

.Welcome .head {
  background-color: #3F4DBF;
  padding-top: 30px;
  width: 100%;
}

.Welcome h1 {
  font-size: xx-large;
  font-weight: 500;
  margin-bottom: 0;
}

.Welcome .slogan {
  display: flex;
  width: 100%;
  margin-top: 20px;
  flex-direction: column;
}

.Welcome img.logo {
  width: 20px;
  border: 4px solid #fff;
  border-radius: 100%;
  box-shadow: 0 7px 40px 3px rgba(0,0,0,0.50), inset 0 0px 0px 0 rgba(0,0,0,0.50);
}

.Welcome img.gps {
  width: 100%;
}

.Welcome .legend {
  text-align: center;
  font-size: xx-small;
}

.Welcome p {
  font-size: x-large;
  text-align: center;
  margin: 2em 1em;
}

.Welcome button {
  background-color: #3F4DAB;
  color: #fff;
  padding: 16px 24px;
  margin: 20px;
  font-size: medium;
  border-radius: 6px;
  border: none;
  box-shadow: 0 7px 40px 3px rgba(0,0,0,0.50), inset 0 0px 0px 0 rgba(0,0,0,0.50);
}

#map {
  zoom: 1.5;
  position: absolute;
  top:0;
  left:0;
  z-index: -1;
}

/* BadgesMenu */
.badges-menu-minimize {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  margin: 20px 10px;
}

.badges-menu-minimize > div {
  height: 50px;
  color: #fff;
  width: 62px;
  text-align: center;
  z-index: 1;
  font-size: xx-large;
}

.badges-menu-minimize img {
  position: absolute;
}

.BadgesMenu {
  z-index: 1;
  position: absolute;
  height: 100%;
  width: 100%;
  background-color: rgba(256,256,256, 0.8);
}

.BadgesMenu h2 {
  text-align: center;
  text-decoration: underline;
}

.close {
  right: 0;
  top: 0;
  position: absolute;
  margin: 1em;
}

.badges-list {
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
  margin-top: 40px;
}

.badge {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100px;
  text-align: center;
}

.badge img {
  width: 70px;
}

/* NewBadge */
.NewBadge {
  z-index: 1;
  position: absolute;
  width: 100%;
  height: 100%;
  justify-content: center;
  align-items: center;
  display: flex;
}

.NewBadge img {
  z-index: 1;
  position: absolute;
  top: 50%;
  left: 50%;
  margin: -70px 0 0 -62px;
}

.NewBadge .background {
  background-image: url('badges/background.png');
  width: 300px;
  height: 325px;
  -webkit-animation:spin 4s linear infinite;
  -moz-animation:spin 4s linear infinite;
  animation:spin 4s linear infinite;
}
@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }

/* Tuto */
.Tuto {
  z-index: 3;
  position: absolute;
  width: 100%;
  height: 100%;
}

.tuto0 {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.panel {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  background-color: #3f4dab;
  color: #fff;
  margin: 10px;
  padding: 10px;
}

.panel button {
  width: 50%;
  border: none;
  background-color: #fff;
  margin: 10px;
  color: #3f4dab;
  font-size: small;
  font-weight: 800;
  padding: 0.5em 1em;
}

.panel .buttons {
  display: flex;
  justify-content: space-between;
}

.tuto1 {
  display: flex;
  justify-content: center;
  align-items: flex-end;
  bottom: 78px;
}

.arrow-box {
  position: relative;
  text-align: center;
  color: #fff;
  padding: 1em;
  font-size: large;
  width: 60%;
  background-color: #3f4dab;
  margin: 0 7px 30px 0;
}

.arrow-box:after {
	top: 100%;
	left: 50%;
	border: solid transparent;
	content: " ";
	height: 0;
	width: 0;
	position: absolute;
	pointer-events: none;
	border-color: rgba(63, 77, 171, 0);
	border-top-color: #3f4dab;
	border-width: 30px;
	margin-left: -30px;
}

.tuto2 {
  z-index: 3;
  position: absolute;
}

.tuto3 {
  display: flex;
  justify-content: center;
  align-items: center;
}

/* Locator */

#radar {
  width: 50px;
  height: 50px;
  background-color: #3F4DAB;

  position: absolute;
  margin: -25px 0 0 -25px;

  border-radius: 100%;
  -webkit-animation: sk-scaleout 1.5s infinite ease-in-out;
  animation: sk-scaleout 1.5s infinite ease-in-out;

  box-shadow: 0 2px 20px 0 rgba(0,0,0,0.50), inset 0 1px 3px 0 rgba(0,0,0,0.50);
}

#user {
  width: 8px;
  height: 8px;
  background-color: #3F4DAB;

  position: absolute;

  margin: -4px 0 0 -4px;

  border-radius: 100%;
}

/* Loading */

.Loading {
  height: 100%;
  top: 40%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.Loading p {
  font-size: larger;
  font-weight: 500;
}

.spinner {
  width: 200px;
  height: 200px;
  background-color: #3F4DAB;

  border-radius: 100%;
  -webkit-animation: sk-scaleout 1.0s infinite ease-in-out;
  animation: sk-scaleout 1.0s infinite ease-in-out;
}

@-webkit-keyframes sk-scaleout {
  0% { -webkit-transform: scale(0) }
  100% {
    -webkit-transform: scale(1.0);
    opacity: 0;
  }
}

@keyframes sk-scaleout {
  0% {
    -webkit-transform: scale(0);
    transform: scale(0);
  } 100% {
    -webkit-transform: scale(1.0);
    transform: scale(1.0);
    opacity: 0;
  }
}

/* Menu */

.Menu {
  z-index: 1;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 50%;
  margin-top: 10px;
  background-color: rgba(256, 256, 256, 0.8);
}

.address-form {
  display: flex;
  height: 40px;
  justify-content: space-around;
  margin: 10px;
}

.address-form input {
  border-bottom: 3px solid #3F4DAB;
  border-top: none;
  border-left: none;
  border-right: none;
  font-size: larger;
}

.houseNumber-input {
  width: 20%;
}

.street-input {
  width: 60%;
}

.searchbar img {
  border-radius: 100%;
  background-color: #3F4DAB;
  width: 30px;
  margin: 2px;
  padding: 2px 4px;
  height: 34px;
}

.create-button {
  color: #fff;
  background-color: #3F4DAB;
  margin: 1em;
  padding: 1em 2em;
  text-align: center;
}

/* Address */

.Address {
  display: flex;
  flex-direction: column;
}

.Address > div {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 2em;
}

.Address img {
  width: 60px;
  height: 66px;
}

.Address address {
  color: grey;
  display: flex;
  font-size: larger;
  flex-direction: column;
}

.Address button {
  border: 1px solid;
  background-color: #fff;
  padding: 1em 2em;
  font-weight: 500;
}

button.remove {
  color: red;
  border-color: red;
}

button.edit {
  color: orange;
  border-color: orange;
}

.divider {
  border-top: 3px solid whitesmoke;
}

/* Suggestions */

.Suggestions {
  display: flex;
  justify-content: flex-end;
  flex-direction: column;
}

/* Dashboard */

.Dashboard {
  display: flex;
  justify-content: space-around;
  align-items: center;
  position: absolute;
  width: 100%;
  bottom: 0;
  height: 68px;
  background-color: rgba(256, 256, 256, 0.8);
}

.suggestion {
  margin: 0.5em 1em;
  padding: 10px 0 10px 0;
  border-bottom: 1px solid #9B9B9B;
  text-align: left;
  color: #9B9B9B;
  font-weight: 700;
  font-size: larger;
}

.suggestion:active {
  color: #fff;
  background-color: #3F4DAB;
}

/* AddAddressButton: */

.AddAddressButton {
  display: flex;
  width: 60px;
  height: 60px;
  border-radius: 100%;
  background: #3F4DAB;
  box-shadow: 0 2px 20px 0 rgba(0,0,0,0.50), inset 0 1px 3px 0 rgba(0,0,0,0.50);
  margin: 9px;
}

.AddAddressButton img {
  width: 60px;
}

.measures {
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
}

.measures img {
  width: 30px;
  margin: 3px;
}

.circle {
  width: 78px;
  height: 78px;
  border-radius: 100%;
  background: rgba(256, 256, 256, 1);
}

/* Error */

.Error {
  color: #fff;
  background-color: #3F4DAB;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  text-align: center;
  height: 100%;
}

.Error img {
  /*width: 50%;*/
}

.Error > div {
  font-size: xx-large;
}

.Error p {
  font-size: large;
}

